* Tue Mar 20 2012
- optparse module replaced by the pygobject GOptionContext wrapper
- hashlib.md5 replaced by the faster GQuark hashing
- os file operation replaced by GFile functions
- function _() renamed to g() as it clashes with the _ built-in symbol

* Mon Mar 19 2012
- Italian localization

* Sun Mar 18 2012
- Extension and configurator more strictly compliant to the HACKING rules
- Autotools scripts added, with modifications to metadata.json
- extension and configurator prepared for localization
- More info files added
- configurator code "restyled"
- don't reconnect all the signals on reload in configurator

* Wed Mar 14 2012 - version 9
- oops... added a button that handles the default profile

* Tue Mar 13 2012 - version 8
- fixed a bug which made a menu entry get disabled when unique
- fixed a bug on error output on settings file missing
- WebAppMenu class renamed to WebAppExtension
- configurator icon
- "advanced options" renamed to "advanced settings"
- configurator window size changed
- better configurator layout
- configurator buttons for profiles
- same text for context menu items and toolbar button tooltips 
- reload button now has the correct text
- sortable tree view columns
- spawn application handler from configurator

* Thu Feb 09 2012 - version 7
- Fixed a little glitch on submenu sorting.
- Major ab_insert() code cleanup.

* Thu Feb 09 2012 - version 6
- Deleted an accidentally left useless debug message.

* Thu Feb 09 2012 - version 5
- Latest Shell compatible version brought to 3.2.3
- ab_insert() adapted to sort both entries and submenus.
- the configuration dialog now uses a default json file.

* Sat Jan 14 2012 - version 4
- Disconnect from ShellAppSystem::installed-changed on disable() (thanks to
  gcampax).

* Thu Jan 12 2012 - version 3
- Destroy file monitors on disable() (thanks to gcampax).
- No actual need for deferred works, disabled.

* Tue Jan 10 2012 - version 2
- Fix minor stuff in metadata.